# lance-bench

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: run-python-benchmarks.yml  run-rust-benchmarks.yml  schedule-benchmarks.yml
scripts/: backfill_benchmarks.py  publish_criterion.py  publish_pytest.py  publish_util.py  regression_report.py  schedule_benchmarks.py
