[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lance-bench"
version = "0.1.0"
description = "Lance database interface for benchmark results"
requires-python = ">=3.12"
dependencies = [
    "lancedb>=0.15.0",
    "psutil>=5.9.0",
    "pyarrow>=14.0.0",
    "pygithub>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pre-commit>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["packages/lance_bench_db"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 130
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
